# mj_formatter

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  requirements-dev.txt  requirements-tree-sitter.txt  requirements.txt  run.py
.github/workflows/: ci.yml
behavior_test/expected/: BitmapTree.hpp  BitmaskTable.hpp  sample.cpp  sample.hpp
behavior_test/input/: BitmapTree.hpp
config/: config.toml
mj_formatter/: __init__.py  main.py
mj_formatter/core/: __init__.py  __main__.py  app_config.py  backup_manifest.py  clang_args.py  clang_decls.py  config_loader.py  edit.py  file_cache.py  file_finder.py  file_io.py  file_result.py  formatter_engine.py  log_setup.py  metrics.py  parse_context.py  parse_control.py  parser_manager.py  policy_cache.py  policy_factory.py  policy_result.py  policy_selector.py  processor.py  report_writer.py  structs.py  table_printer.py  undo_manager.py  violation.py
mj_formatter/policies/: __main__.py  align_assignments_policy.py  brace_style_policy.py  clang_format_policy.py  class_layout_policy.py  compact_declarations_policy.py  dash_comment_policy.py  function_void_params_policy.py  include_guard_policy.py  include_order_policy.py  line_wrap_policy.py  lua_policy.py  namespace_end_comments_policy.py  naming_conventions_policy.py  operator_overload_spacing_policy.py  pointer_bind_style_policy.py  policy_base.py  pragma_once_spacing_policy.py  regex_replace_policy.py  registry.py  section_title_policy.py  snake_case_policy.py  spacing_style_policy.py  stub_policy.py  trim_trailing_whitespace_policy.py
mj_formatter/utils/: warn_once.py
scripts/: feedback.sh  profile_matrix.py  profile_parsers.py
src/: main.rs  text_scan.rs
src/app/: benchmark.rs  graph_refresh.rs  mod.rs  propagation.rs  reporting.rs  runner.rs  worker.rs
src/cli/: args.rs
src/config/: app_config.rs  benchmark_config.rs  confidence_config.rs  enums.rs  gate_config.rs  graph_config.rs  loader.rs  mod.rs  optimizer_config.rs  policy_config.rs  policy_defaults.rs  raw.rs  retry_config.rs  rollout_profile.rs  types.rs
src/engine/: accuracy_gate.rs  adaptive_rules.rs  catalog.rs  certainty_filter.rs  confidence_context.rs  conflict_detector.rs  (+20 more)
tests/: bench_formatter_engine.py  test_align_assignments_policy.py  test_backup_manifest.py  test_batch_autotuner.py  test_behavior_end_to_end.py  test_check_result_cache.py  test_edit_guard_and_parse_control.py  test_editorconfig_and_wrap.py  test_executor_registry.py  test_file_finder.py  test_include_guard_policy.py  test_include_order_policy.py  test_namespace_end_comments_policy.py  test_naming_semantic.py  test_parser_requirements.py  test_pointer_bind_style_policy.py  test_policy_confidence_engine.py  test_policy_conflict_detector.py  test_policy_factory.py  test_post_edit_checker.py  test_retry_snapshot_cache.py  test_run_journal.py  test_undo_manager.py  test_worker_runner_batching.py
(+237 files in other folders)
