[package]
name = "formatter"
version = "1.0.0"
edition = "2021"
description = "Formatter — adaptive C++ code formatter with semantic policy pipeline"
license = "MIT"
default-run = "formatter"

[dependencies]
anyhow = "1.0"
smallvec = { version = "1.15", features = ["serde"] }
arc-swap = "1.9"
postcard = { version = "1.1", features = ["alloc"] }
clang = { version = "2.0", features = ["runtime"] }
clap = { version = "4", features = ["derive"] }
crc32fast = "1.5"
crossbeam-channel = "0.5"
dashmap = "6.1"
globset = "0.4"
libc = "0.2"
memchr = "2"
rayon = "1.11"
rustc-hash = "2"
moka = { version = "0.12", features = ["sync"] }
reed-solomon-erasure = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
toml = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[[bin]]
name = "report"
path = "src/bin/report.rs"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
