[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mj-formatter"
version = "0.1.0"
description = "Standalone, policy-driven formatter prototype for C++ sources."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
  "cachetools>=5.3.3",
  "diskcache>=5.6.3",
  "tree-sitter>=0.21.3",
  "tree-sitter-c>=0.24.0",
  "tree-sitter-cpp>=0.23.0",
  "tree-sitter-languages>=1.10.2",
  "clang>=16.0.0",
  "libclang>=16.0.0",
]

[project.optional-dependencies]
lua = ["lupa>=2.0"]
speedups = ["orjson>=3.9"]
dev = ["pytest>=7.4", "pytest-benchmark>=4.0", "mypy>=1.11"]

[project.scripts]
mj_formatter = "mj_formatter.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mj_formatter*"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
show_error_codes = true
pretty = true
